bootstrap layout3 modified

--- a/bootstrap_layout3.html
+++ b/bootstrap_layout3.html
@@ -160,7 +160,7 @@
                 </div>
             </div>
         </div>
-        <div class="part3">
+        <div class="part3 text-center">
             <h5>No Fees, No Setbacks</h5>
             <h3>There's nothing stopping you now !​</h3>
             <p>Learn at 0 INR upfront and pay only after you’re placed at 4.5 LPA or more</p>
